Updated index.html for login functionality

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "public",  // Make sure this points to your hosting directory (e.g., 'public')
+    "public": "docs",  // Updated to point to the 'docs' directory
     "headers": [
       {
         "source": "**/*.@(js|css|html)",
@@ -23,7 +23,7 @@
     "hosting": {
       "port": 5001
     },
-    "ui": {
+      "ui": {
       "enabled": true
     },
     "singleProjectMode": true
